Close the v0.9 reliability and truthfulness gaps (#319)
* fix(0.9): close the v0.9 reliability and truthfulness gaps

Six findings from the v0.9 closure review, plus two found while working
on them.

WGC acquire failures are classified instead of swallowed. The recording
worker's three WGC catch sites discarded every exception, so a source
that had permanently stopped delivering kept the encode loop emitting
its last held frame -- a dead capture that looked like a healthy
recording for as long as it was left running. A shared pure classifier
(wgc_acquire_classify.h) splits device loss, source loss and
unclassified codes; the recording worker ends the session on all three
(source loss through the clean path the item Closed event uses, the
other two as an explicit failure naming the HRESULT), and the preview
producer keeps holding its last frame but now logs an unclassified code
instead of folding it into an ordinary blank. The first-frame path no
longer reports a 5 s timeout for a device that was already gone. The
two teardown catches stay silent and say why.

The Settings dropdowns offered combinations the engine refused.
IsContainerCompatSelectable accepted Experimental while CapabilitySet
mapped Experimental to NotImplemented, so MP4 + AV1 and MP4 + PCM/FLAC
were selectable in the UI and reconciled away at record time -- and the
product spec container matrix documented AV1-in-MP4 as offered. The
predicate now agrees with the gate, and a matrix test ties registry
level to actual selectability so the two cannot drift apart again.

--auto-record stops accepting options it ignores. --enable-preview,
--screenshot-path and --capture-frame-in-ready belonged to the
off-screen preview mode that did not survive the Qt Quick cutover: they
parsed cleanly and did nothing, so a run could ask for an artefact, be
told it succeeded, and produce none. They are rejected with a message
naming the replacement. --capture-frame-at is wired through: the written
PNG is reported as snapsho